--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Name : index . html
 Assignment : Lab 1 Exercise A
 Author ( s ) : Mahdi Ansari , William Arthur Philip Louis
 Submission : May 21 , 2030
-Description : A simple HTML file .
+Description : A simple HTML file . test commit
 = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
 -->
 <!DOCTYPE html>
